# 3D-Rendering-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh
demo/cube/: CMakeLists.txt  cube.cpp
demo/cube/shaders/: fragment.glsl
demo/triangle/: CMakeLists.txt  triangle.cpp
include/: Camera.h  Material.h  Mesh.h  Renderer.h  Scene.h  Shader.h
sample_step_files/: boxy_with_flatness.stp
shaders/: fragment.glsl  vertex.glsl  vertex.shader
src/: Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  main.cpp
